--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "nprogress": "^0.2.0",
+    "nuqs": "^2.4.1",
     "payload": "^3.38.0",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
