--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@payloadcms/db-mongodb": "^3.38.0",
     "@payloadcms/next": "^3.38.0",
     "@payloadcms/payload-cloud": "^3.38.0",
+    "@payloadcms/plugin-multi-tenant": "3.38.0",
     "@payloadcms/richtext-lexical": "^3.38.0",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-alert-dialog": "^1.1.13",
@@ -66,6 +67,7 @@
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.3",
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.15.3",
